# WBSA-Tool

./: .gitignore  Dockerfile  README.md  data_model.drawio  docker-compose.yml  docker-entrypoint.sh  mockup-bootstrap.html  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
WBSAtool/: manage.py
WBSAtool/WBSAtool/: asgi.py  settings.py  urls.py  wsgi.py
WBSAtool/backend/: admin.py  models.py  serializers.py  urls.py  views.py
WBSAtool/backend/migrations/: 0001_initial.py  0002_remove_timeslot_appointment_count_and_more.py  0003_appointment_area.py  0004_remove_appointment_email_alter_appointment_lat_and_more.py
WBSAtool/frontend/: admin.py  auth_views.py  forms.py  models.py  urls.py  views.py
WBSAtool/frontend/management/commands/: populate_default_permissions.py
WBSAtool/frontend/migrations/: 0001_initial.py  0002_auto_20230226_2157.py  0003_alter_area_parent.py  0004_alter_street_area.py  0005_remove_timeslot_area.py  0006_auto_20230313_2046.py  0007_street_osm_imported.py  0008_alter_appointment_text.py  0009_appointment_is_collected.py  0010_timeslot_appointment_count_timeslot_appointment_max_and_more.py
WBSAtool/frontend/static/: leaflet.extra-markers.min.css  table_utils.js  wbsa.css  wbsa.js  wbsa_map.js
WBSAtool/frontend/templates/: base.html  bulk_edit.html  error_page.html  model_edit.html
WBSAtool/frontend/templates/appointment/: appointment_dispo.html  map.html  (+4 more)
WBSAtool/frontend/utils/: ReportLabWrapper.py
WBSAtool/frontend/view_collection/: appointment.py  area.py  collect.py  generic.py  street.py  timeslot.py
(+15 files in other folders)
